# clr3-interview

./: Cargo.toml  README.md  substreams.yaml
proto/: mydata.proto
src/: lib.rs
src/pb/: .last_generated_hash  mydata.v1.rs
